--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -83,24 +83,18 @@ stages:
           - pwsh: |
               $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
 
-              $packageDir = "$(Build.ArtifactStagingDirectory)/package-$(target)"
-
-              if (-Not (Test-Path -Path $packageDir)) {
-                  New-Item -ItemType Directory -Path $packageDir
+              if("$(vmImage)" -eq "windows-latest") {
+                Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip
+              } else {
+                bash -c "cd $(Build.ArtifactStagingDirectory)/raw-$(target)/`nzip -r $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip ./"
               }
 
-              Copy-Item -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -Destination $packageDir
-              Copy-Item -Path README.md -Destination $packageDir
-
-              $packagePath = "$packageDir/fiskaltrust.Launcher-$version.zip"
-              Compress-Archive -Path $packageDir/* -DestinationPath $packagePath
-
-              $hash = Get-FileHash $packagePath -Algorithm SHA256
+              $hash = Get-FileHash $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip -Algorithm SHA256
               $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | foreach-object { if ($_) {[System.Convert]::ToByte($_,16)}}
               $hashstring = [System.Convert]::ToBase64String($hashbytes)
-              $hashstring | Set-Content $packageDir/fiskaltrust.Launcher-$version.zip.hash
-            displayName: Package executables and README.md      
-          
+              $hashstring | Set-Content $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash
+            displayName: Pagkage executables
+
           - pwsh: |
               $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
 
