--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -93,7 +93,7 @@ stages:
               $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | foreach-object { if ($_) {[System.Convert]::ToByte($_,16)}}
               $hashstring = [System.Convert]::ToBase64String($hashbytes)
               $hashstring | Set-Content $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash
-            displayName: Package executables
+            displayName: "Package executables"
 
           - pwsh: |
               Copy-Item -Path ./README.md -Destination $(Build.ArtifactStagingDirectory)/scripts-$(target)/README.md
@@ -104,20 +104,22 @@ stages:
               $updatedContent = $readmeContent -replace '(?s)<!-- BEGIN (CONTRIBUTING|LICENSE) -->.*?<!-- END (CONTRIBUTING|LICENSE) -->\s*', ''
               $updatedContent | Set-Content $(Build.ArtifactStagingDirectory)/scripts-$(target)/README.md
             displayName: "Update README.md"
-                    
+
           - pwsh: |
+              $scriptFolderPath = "$(Build.ArtifactStagingDirectory)/scripts-$(target)"
               $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
-              $scriptTargetPath = "$(Build.ArtifactStagingDirectory)/scripts-$(target)/fiskaltrust.Launcher.Scripts-$version.zip"
+              $scriptTargetPath = "$scriptFolderPath/fiskaltrust.Launcher.Scripts-$version.zip"
+
+              Copy-Item -Path ./scripts/$(scriptFolder)/* -Destination $scriptFolderPath
 
               if("$(vmImage)" -eq "windows-latest") {
-                Compress-Archive -Path ./scripts/$(scriptFolder)/*, $(Build.ArtifactStagingDirectory)/scripts-$(target)/README.md -DestinationPath $scriptTargetPath
+                Compress-Archive -Path $scriptFolderPath/* -DestinationPath $scriptTargetPath
               } else {
-                bash -c "chmod +x ./scripts/$(scriptFolder)/*"
-                bash -c "cd ./scripts/$(scriptFolder)/`nzip -r $scriptTargetPath ./"
-                bash -c "cd $(Build.ArtifactStagingDirectory)/scripts-$(target)/`nzip -r $scriptTargetPath README.md"
+                bash -c "chmod +x $scriptFolderPath/*"
+                bash -c "cd $scriptFolderPath && zip -r $scriptTargetPath ./"
               }
-            displayName: Package scripts with README.md
-                    
+            displayName: "Package scripts with README.md"
+
           - publish: $(Build.ArtifactStagingDirectory)/package-$(target)
             artifact: package-$(target)
 
