add scripts to github releases

--- a/azure-pipelines/templates/stages/github-release.yml
+++ b/azure-pipelines/templates/stages/github-release.yml
@@ -38,11 +38,21 @@ stages:
       - download: ${{ parameters.artifact }}
         artifact: drop-${{ target }}
         displayName: "[${{ target }}] Download artifact"
+        
+    - ${{ each target in parameters.targets }}:
+      - download: ${{ parameters.artifact }}
+        artifact: scripts-${{ target }}
+        displayName: "[${{ target }}] Download artifact"
 
     - pwsh: |
         Get-ChildItem $(Pipeline.Workspace)/${{ parameters.artifact }}/ -Recurse -File | Where-Object { !($_ -match "fiskaltrust.Launcher(.exe)?`$") } | Remove-Item
         Get-ChildItem $(Pipeline.Workspace)/${{ parameters.artifact }}/ -Recurse -Directory | %{ $_ -match "drop-(.*)"; Move-Item $_ $(Join-Path $_.Parent $Matches[1]); }
       displayName: Prepare artifacts
+
+    - ${{ each target in parameters.targets }}:
+      - bash: |
+          unzip -d $(Pipeline.Workspace)/${{ parameters.artifact }}/${{ target }} $(Pipeline.Workspace)/${{ parameters.artifact }}/scripts-${{ target }}/fiskaltrust.Launcher.Scripts-*.zip
+        displayName: "[${{ target }}] Unzip scripts"
 
     - bash: mkdir $(Pipeline.Workspace)/zipped/
       displayName: Create folder
