add macos scripts

--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -39,7 +39,7 @@ stages:
             osx-x64:
               vmImage: macos-11
               target: osx-x64
-              scriptFolder: 'linux'
+              scriptFolder: 'macos'
 
         pool:
           vmImage: $(vmImage)
