fix launcher updater

--- a/src/fiskaltrust.LauncherUpdater/fiskaltrust.LauncherUpdater.csproj
+++ b/src/fiskaltrust.LauncherUpdater/fiskaltrust.LauncherUpdater.csproj
@@ -7,6 +7,7 @@
     <PublishReadyToRun>true</PublishReadyToRun>
     <PublishSingleFile>true</PublishSingleFile>
     <PublishTrimmed>true</PublishTrimmed>
+    <JsonSerializerIsReflectionEnabledByDefault>true</JsonSerializerIsReflectionEnabledByDefault>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
