--- a/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
+++ b/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
@@ -15,13 +15,13 @@
   <ItemGroup>
     <PackageReference Include="CoreWCF.Http" Version="1.5.1" />
     <PackageReference Include="CoreWCF.NetTcp" Version="1.5.1" />
-    <PackageReference Include="fiskaltrust.interface" Version="1.3.50-rc1" />
+    <PackageReference Include="fiskaltrust.interface" Version="1.3.55-rc2" />
     <PackageReference Include="fiskaltrust.Middleware.Abstractions" Version="1.3.3" />
 
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Soap" Version="1.3.50-rc2" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Soap" Version="1.3.55-rc2" />
     <PackageReference Include="fiskaltrust.storage.serialization" Version="1.3.47" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="1.3.50-rc2" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="1.3.50-rc2" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="1.3.55-rc2" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="1.3.55-rc2" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="8.0.0" />
     <PackageReference Include="Polly" Version="8.2.1" />
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
@@ -39,7 +39,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../fiskaltrust.Launcher.Common/fiskaltrust.Launcher.Common.csproj"
-      PrivateAssets="all" />
+    <ProjectReference Include="../fiskaltrust.Launcher.Common/fiskaltrust.Launcher.Common.csproj" PrivateAssets="all" />
   </ItemGroup>
 </Project>
