--- a/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
+++ b/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="fiskaltrust.interface" Version="1.3.55-rc2" />
     <PackageReference Include="fiskaltrust.Middleware.Abstractions" Version="1.3.3" />
 
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Soap" Version="1.3.55-rc2" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Soap" Version="1.3.70" />
     <PackageReference Include="fiskaltrust.storage.serialization" Version="1.3.47" />
     <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="1.3.55-rc2" />
     <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="1.3.55-rc2" />
