--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,15 +2,15 @@ name: Test Launcher
 
 on:
   workflow_dispatch:
-  workflow_call:
-    inputs:
-      commit:
-        type: string
-        required: false
-  push:
-    branches:
-      - main
-      - refs/tags/*
+  # workflow_call:
+  #   inputs:
+  #     commit:
+  #       type: string
+  #       required: false
+  # push:
+  #   branches:
+  #     - main
+  #     - refs/tags/*
   pull_request:
     branches:
       - main
