--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,13 +39,13 @@ jobs:
     - uses: actions/checkout@v4
       
     - name: build
-      uses: fiskaltrust/middleware/.github/actions/build
+      uses: fiskaltrust/middleware/.github/actions/build@main
       with:
          pattern: fiskaltrust.Launcher.sln
          configuration: ${{ steps.config.outputs.config }}
 
     - name: Unit Tests
-      uses: ./.github/actions/test
+      uses: ./.github/actions/test@main
       with:
         directory: test
         pattern: "UnitTest"
@@ -56,7 +56,7 @@ jobs:
         CONNECTIONSTRING_MYSQL_TESTS: ${{ secrets.CONNECTIONSTRING_MYSQL_TESTS }}
 
     - name: Integration Tests
-      uses: ./.github/actions/test
+      uses: ./.github/actions/test@main
       with:
         directory: test
         pattern: "IntegrationTest"
